--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/antellitocci/food-festival#readme",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "webpack": "^5.50.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "image-webpack-loader": "^7.0.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0"
   }
